Tooltips removed, and tutorial updated

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -83,22 +83,6 @@
         <Item id="HeaderText">Year: {0} (Age {1}, {2})</Item> <!-- {2} is the path -->
         <Item id="SliderText">{0} year(s) after now</Item>
 
-        <!-- Tooltip -->
-        <Item id="BtnActivity">Switches to the Activity visualization.</Item>
-        <Item id="BtnLineChart">Switches to the Line Chart visualization.</Item>
-        <Item id="BtnPrius">Switches to the Prius visualization.</Item>
-        <Item id="BtnInfo">Shows the path information.</Item>
-        <Item id="BtnPlay">Starts the year progression.</Item>
-        <Item id="BtnStop">Stops the year progression.</Item>
-        <Item id="BtnPullRight">Pulls one section to the right of the chart for better view.</Item>
-        <Item id="BtnRibbonGraph">Toggles the ribbons across the charts.</Item>
-        <Item id="BtnTransparent">Adjusts the transparency of the chart background.</Item>
-        <Item id="BtnDim">Adjusts the brightness of the range bars.</Item>
-        <Item id="BtnHide">Toggles the visibilitiy of the range bars.</Item>
-        <Item id="BtnSwitchPath">Switches among different paths.</Item>
-        <Item id="BtnSwitchAct">Switches among different activities.</Item>
-        <Item id="BtnSwitchPrius">Switches among different organs.</Item>
-
         <!-- Line chart -->
         <Item id="LCOverall">Overall</Item>
         <Item id="LCBodyFat">Body Fat</Item> <!-- (%) -->
@@ -208,7 +192,7 @@
 
     <Tutorials>
     <Item id="CursorTitle">Interaction System</Item>
-    <Item id="CursorText">This app uses cursor interaction. There is a pointer in the center of the screen. Move your device to make it hover on the object you wish to interact with. The cursor will turn yellow and become larger when it detects an interactable object. Then, tap anywhere on the screen to interact.</Item>
+    <Item id="CursorText">To interact with different AR components, such as buttons, simply click them on the screen.</Item>
     <Item id="LCIntroTitle">Line Chart Visualization</Item>
     <Item id="LCIntroText1">To the right of the figure are the data given by Bodylogical. There are 6 biometrics: body fat, BMI, HbA1C, LDL, blood pressure, and an overall score. The bars are separated into three sections, indicating health status. The indicators will be connected by ribbons across years to give you a clearer view of health development.</Item>
     <Item id="LCIntroText2">On the left of the control panel there will be 4 control buttons. Try each of them to see what they do! Also, try clicking on each of the banners themselves to study closer.</Item>
