Age added to archetypes, add LocalizedDicts, and other bug fixes

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -15,7 +15,7 @@
         <Item id="PathGreenVerbose">Optimal Change</Item>
 
         <Item id="StatusGood">Good</Item>
-        <Item id="StatusIntermediate">Intermediate</Item>
+        <Item id="StatusModerate">Moderate</Item>
         <Item id="StatusBad">Bad</Item>
 
         <Item id="ActJog">Jogging</Item>
@@ -131,6 +131,7 @@
     <!-- Archetype data -->
     <Archetypes>
         <Item id="Name">Name: {0}</Item>
+        <Item id="Age">Age: {0}</Item>
         <Item id="Occupation">Job: {0}</Item>
         <Item id="Status">Health: {0}</Item>
 
@@ -142,9 +143,6 @@
         <Item id="Sleep">Sleep</Item>
         <Item id="SleepHour">Time (Hours):</Item>
         <Item id="Prescription">Prescription adherence:</Item>
-        <Item id="PresGood">Good</Item>
-        <Item id="PresMedium">Medium</Item>
-        <Item id="PresBad">Bad</Item>
         <Item id="ExercisePerWeek">Exercise Per Week (Hours):</Item>
         <Item id="DietCalorie">Calories:</Item>
 
