--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -15,7 +15,7 @@
         <Item id="PathGreenVerbose">変更なし</Item>
 
         <Item id="StatusGood">良い</Item>
-        <Item id="StatusIntermediate">まあまあ</Item>
+        <Item id="StatusModerate">まあまあ</Item>
         <Item id="StatusBad">悪い</Item>
 
         <Item id="ActJog">ジョギング</Item>
@@ -131,6 +131,7 @@
     <!-- Archetype data -->
     <Archetypes>
         <Item id="Name">名前：{0}</Item>
+        <Item id="Age">年齢：{0}</Item>
         <Item id="Occupation">職業：{0}</Item>
         <Item id="Status">健康：{0}</Item>
 
@@ -142,9 +143,6 @@
         <Item id="Sleep">睡眠</Item>
         <Item id="SleepHour">時間：</Item>
         <Item id="Prescription">Prescription adherence:</Item>
-        <Item id="PresGood">良い</Item>
-        <Item id="PresMedium">まあまあ</Item>
-        <Item id="PresBad">悪い</Item>
         <Item id="ExercisePerWeek">毎週運動時間数：</Item>
         <Item id="DietCalorie">カロリー：</Item>
 
