First commit to development branch. Forgive the current issues. Added heart vessel animation and worked on RibbonMove.cs script.

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+﻿<?xml version="1.0" encoding="UTF-8"?>
 <Localization>
     <!-- Info commonly used in the app. -->
     <General>
@@ -72,7 +72,7 @@
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
         <Item id="InfoCurrentTitle">Continue Current Activity</Item>
 
-        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you develop the optimal health condition with everyday fuill of energy and smile.</Item>
+        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you develop the optimal health condition with everyday full of energy and life.</Item>
         <Item id="InfoMinimal">Bodylogical believes that this following life activity plan can prevent you from most cardiovascular diseases, with minimal effort on the change to your current habits</Item>
         <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months</Item>
         
