Fixed spelling and grammatical errors in English localization XML file. Replaced English text with Japanese translation text in Japanese localization XML file. Modified position and scale of world-space control panels.

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -10,9 +10,9 @@
         <Item id="PathRedConcise">No Change</Item>
         <Item id="PathYellowConcise">Minimal</Item>
         <Item id="PathGreenConcise">Optimal</Item>
-        <Item id="PathRedVerbose">No Life Plan Change</Item>
-        <Item id="PathYellowVerbose">Minimal Change</Item>
-        <Item id="PathGreenVerbose">Optimal Change</Item>
+        <Item id="PathRedVerbose">No Lifestyle Change</Item>
+        <Item id="PathYellowVerbose">Minimal Lifestyle Change</Item>
+        <Item id="PathGreenVerbose">Optimal Lifestyle Change</Item>
 
         <Item id="StatusGood">Good</Item>
         <Item id="StatusModerate">Moderate</Item>
@@ -72,9 +72,9 @@
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
         <Item id="InfoCurrentTitle">Continue Current Activity</Item>
 
-        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you develop the optimal health condition with everyday full of energy and life.</Item>
-        <Item id="InfoMinimal">Bodylogical believes that this following life activity plan can prevent you from most cardiovascular diseases, with minimal effort on the change to your current habits</Item>
-        <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months</Item>
+        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you achieve your most optimal lifestyle, everyday full of energy and serenity.</Item>
+        <Item id="InfoMinimal">Bodylogical believes that the following change in lifestyle can prevent your development of most cardiovascular diseases, with minimal changes to your current, everyday life.</Item>
+        <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months.</Item>
         
         <!-- Use &#10; to represent new line -->
         <Item id="InfoTemplate">Sleep: {0} hours/day&#10;Excercise: {1} hour/week&#10;Calories: {2} cal/day&#10;Prescription: {3}</Item>
@@ -94,8 +94,8 @@
         <Item id="LCYear">{0} Years</Item>
 
         <!-- Activity -->
-        <Item id="ActMaleCompanion">This is Barley, a close friend who is in a good shape.</Item>
-        <Item id="ActFemaleCompanion">This is Diana, a close friend who is in a good shape.</Item>
+        <Item id="ActMaleCompanion">This is Barley, a close friend who is in good shape.</Item>
+        <Item id="ActFemaleCompanion">This is Diana, a close friend who is in good shape.</Item>
 
         <!-- Prius -->
         <Item id="PriusWelcome">Please select a path to continue.</Item>
@@ -106,8 +106,8 @@
         <Item id="PriHeartGoodVerbose">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
         <Item id="PriHeartIntermediateConcise">Heart has trouble pumping blood.</Item>
         <Item id="PriHeartIntermediateVerbose">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging.</Item>
-        <Item id="PriHeartBadConcise">High blood pressure and cholesterol will clog the blood pressure and cause problems sucha s stroke, heart attack, etc.</Item>
-        <Item id="PriHeartBadVerbose">Arteries have high chance of clogging, potentials for heart attacks.</Item>
+        <Item id="PriHeartBadConcise">High blood pressure and cholesterol will clog the blood pressure and cause problems such as a stroke, heart attack, etc.</Item>
+        <Item id="PriHeartBadVerbose">Arteries have high chance of clogging, giving potential for heart attacks.</Item>
 
         <Item id="PriLiverGeneral">Liver health is related to BMI and LDL.</Item>
         <Item id="PriLiverGoodConcise">Liver is normal.</Item>
@@ -122,7 +122,7 @@
         <Item id="PriKidneyGoodVerbose">With low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
         <Item id="PriKidneyIntermediateConcise">Kidney is in process of diabetes.</Item>
         <Item id="PriKidneyIntermediateVerbose">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
-        <Item id="PriKidneyBadConcise">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
+        <Item id="PriKidneyBadConcise">Persistent high blood pressure and high glucose levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
         <Item id="PriKidneyBadVerbose">Kidney is experiencing diabetes.</Item>
 
         <Item id="PriHeartVessel">This is a blood vessel with red cells flowing through. As the person's health gets worse, the vessel might get clogged, preventing cells to flow.</Item>
@@ -142,7 +142,7 @@
         <Item id="Adherence">Adherence</Item>
         <Item id="Sleep">Sleep</Item>
         <Item id="SleepHour">Time (Hours):</Item>
-        <Item id="Prescription">Prescription adherence:</Item>
+        <Item id="Prescription">Prescription Adherence:</Item>
         <Item id="ExercisePerWeek">Exercise Per Week (Hours):</Item>
         <Item id="DietCalorie">Calories:</Item>
 
@@ -162,26 +162,26 @@
 
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
     <Instructions>
-        <Item id="PlaneFind">Please find a flat surface</Item>
+        <Item id="PlaneFind">Please find a flat surface.</Item>
         <Item id="PlaneCont">Continue scanning...</Item>
-        <Item id="PlaneGood">This plane looks good. Confirm?</Item>
+        <Item id="PlaneGood">This plane looks good! Confirm?</Item>
         
         <Item id="StageCreate">Creating stage...</Item>
-        <Item id="StageConfirm">Double tap to confirm stage position</Item>
+        <Item id="StageConfirm">Double tap to place.</Item>
         
         <Item id="ArchetypeSelect">Select archetype to start&#10;Press "Reset" to relocate plane</Item>
         <Item id="ArchetypeRead">Reading archetype info...</Item>
-        <Item id="ArchetypePredict">Please press "?" Button</Item>
+        <Item id="ArchetypePredict">Please press ">>" Button</Item>
 
          <Item id="TutorialSkipAll">Are you sure? You can restore tutorials later in Settings.</Item>
         <!-- Line chart -->
-        <Item id="LCAlter">Use the left buttons to alter ribbon chart.</Item>
-        <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
-        <Item id="LCBackground">You just hid the light blue panel background.</Item>
-        <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
-        <Item id="LCSet">You just hid the bars. Click again to show them.</Item>
+        <Item id="LCAlter">Use buttons on the left to modify ribbon chart display options.</Item>
+        <Item id="LCToggleRibbon">You have toggled the ribbon charts. This allows you to focus on individual years.</Item>
+        <Item id="LCBackground">You have hidden the light blue panel background.</Item>
+        <Item id="LCDim">You have dimmed the bars. Click again to light them up.</Item>
+        <Item id="LCSet">You have hidden the bars. Click again to show them.</Item>
         <Item id="LCPullError">You clicked too fast. Wait a second and try again.</Item>
-        <Item id="LCPull">You just pull the section to the right. Click again to move it back.</Item>
+        <Item id="LCPull">To select one chart, tap one from the left. To undo, tap again. You may also select other sections from the right.</Item>
         <!-- Path switch -->
         <Item id="PathSwitch">Switched to {0}</Item>
         <!-- Prius -->
@@ -192,10 +192,10 @@
     <Item id="CursorTitle">Interaction System</Item>
     <Item id="CursorText">To interact with different AR components, such as buttons, simply click them on the screen.</Item>
     <Item id="LCIntroTitle">Line Chart Visualization</Item>
-    <Item id="LCIntroText1">To the right of the figure are the data given by Bodylogical. There are 6 biometrics: body fat, BMI, HbA1C, LDL, blood pressure, and an overall score. The bars are separated into three sections, indicating health status. The indicators will be connected by ribbons across years to give you a clearer view of health development.</Item>
+    <Item id="LCIntroText1">To the right of the figure is data interpolated by Bodylogical. There are 6 biometrics: body fat, BMI, HbA1C, LDL, blood pressure, and an overall score. The bars are separated into three sections, indicating health status. The indicators will be connected by ribbons across (present to future > front to back) years to give you a clearer view of health development.</Item>
     <Item id="LCIntroText2">On the left of the control panel there will be 4 control buttons. Try each of them to see what they do! Also, try clicking on each of the banners themselves to study closer.</Item>
     <Item id="ActIntroTitle">Activity Visualization</Item>
-    <Item id="ActIntroText">Activities gives you a high-level view of the figure's health by simulating the figure's motion capabilities. You can see the character and his/her healthy friend working together. Use the slider bar and media buttons to see how they will behave in the future.</Item>
+    <Item id="ActIntroText">Activities gives you a high-level view of the figure's health by simulating the figure's physical capacity. You can see the character and his/her healthy friend working side-by-side. Use the slider bar and media buttons to see how they will behave in the future.</Item>
     <Item id="PriIntroTitle">Internals Visualization</Item>
     <Item id="PriIntroText">Internals simulate what happens inside the figure's organs. We will focus on three organs: heart, liver, and kidney. Click on the labels beside the organs to zoom in for closer inspection.</Item>
     </Tutorials>
