--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -63,21 +63,21 @@
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
         <!-- Panels -->
-        <Item id="TimeControlHeader">Time Controls</Item>
-        <Item id="RibbonChartHeader">Line Chart Controls</Item>
-        <Item id="MainHeader">Controls</Item>
+        <Item id="TimeControlHeader">時間コントロル</Item>
+        <Item id="RibbonChartHeader">ラインチャートコントロル</Item>
+        <Item id="MainHeader">コントロル</Item>
 
         <!-- Info -->
-        <Item id="InfoOptimalTitle">Recommended Activities</Item>
-        <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
-        <Item id="InfoCurrentTitle">Continue Current Activity</Item>
+        <Item id="InfoOptimalTitle">一番おすすめ運動</Item>
+        <Item id="InfoMinimalTitle">平均的運動</Item>
+        <Item id="InfoCurrentTitle">変わんない運動</Item>
 
-        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you develop the optimal health condition with everyday fuill of energy and smile.</Item>
-        <Item id="InfoMinimal">Bodylogical believes that this following life activity plan can prevent you from most cardiovascular diseases, with minimal effort on the change to your current habits</Item>
-        <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months</Item>
+        <Item id="InfoOptimal">Bodylogical suggests following this life activity in next 12 months, which helps you achieve your most optimal lifestyle, everyday full of energy and serenity.</Item>
+        <Item id="InfoMinimal">Bodylogical believes that the following change in lifestyle can prevent your development of most cardiovascular diseases, with minimal changes to your current, everyday life.</Item>
+        <Item id="InfoCurrent">Choose this if you want to pursue a life with activities identical to the current ones. View the health status after 12 months.</Item>
         
         <!-- Use &#10; to represent new line -->
-        <Item id="InfoTemplate">Sleep: {0} hours/day&#10;Excercise: {1} hour/week&#10;Calories: {2} cal/day&#10;Prescription: {3}</Item>
+        <Item id="InfoTemplate">睡眠: {0} 時/日&#10;運動: {1} 時/週間&#10;カロリー: {2} カロリー/日&#10;処方: {3}</Item>
 
         <!-- Time progression -->
         <Item id="HeaderText">{0}年 ({1}歳, {2})</Item> <!-- {2} is the path -->
@@ -106,7 +106,7 @@
         <Item id="PriHeartGoodVerbose">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
         <Item id="PriHeartIntermediateConcise">Heart has trouble pumping blood.</Item>
         <Item id="PriHeartIntermediateVerbose">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging.</Item>
-        <Item id="PriHeartBadConcise">High blood pressure and cholesterol will clog the blood pressure and cause problems sucha s stroke, heart attack, etc.</Item>
+        <Item id="PriHeartBadConcise">High blood pressure and cholesterol will clog the blood pressure and cause problems such as a stroke, heart attack, etc.</Item>
         <Item id="PriHeartBadVerbose">Arteries have high chance of clogging, potentials for heart attacks.</Item>
 
         <Item id="PriLiverGeneral">Liver health is related to BMI and LDL.</Item>
@@ -139,10 +139,10 @@
         <Item id="CurrentYear">当前：{0}</Item>
         <Item id="Exercise">運動</Item>
         <Item id="Diet">飲食</Item>
-        <Item id="Adherence">Adherence</Item>
+        <Item id="Adherence">守り</Item>
         <Item id="Sleep">睡眠</Item>
         <Item id="SleepHour">時間：</Item>
-        <Item id="Prescription">Prescription adherence:</Item>
+        <Item id="Prescription">処方守り:</Item>
         <Item id="ExercisePerWeek">毎週運動時間数：</Item>
         <Item id="DietCalorie">カロリー：</Item>
 
