Improved and expanded Japanese localization file. Created DragRotate.cs file that allows the user to apply angular force to large organs in the Prius Viewer.

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -4,7 +4,7 @@
     <General>
         <Item id="Lang-en_US">English</Item>
         <Item id="Lang-ja_JP">日本語</Item>
-        <Item id="LangChoose">言語を選びなさい。</Item>
+        <Item id="LangChoose">言語をお選び下さい。</Item>
         <Item id="LangTip">後で言語も変更できます。</Item>
 
         <Item id="PathRedConcise">変更なし</Item>
@@ -51,7 +51,7 @@
         <Item id="Exit">エクシ</Item>
         <Item id="TutorialNext">次</Item>
         <Item id="TutorialSkip">スキップ</Item>
-        <Item id="TutorialSkipAll">全てスキップ</Item>
+        <Item id="TutorialSkipAll">全スキップ</Item>
 
         <Item id="Switcher">変更</Item>
         
@@ -63,9 +63,9 @@
     <!-- Legneds are text displayed on world position canvases. -->
     <Legends>
         <!-- Panels -->
-        <Item id="TimeControlHeader">時間コントロル</Item>
-        <Item id="RibbonChartHeader">ラインチャートコントロル</Item>
-        <Item id="MainHeader">コントロル</Item>
+        <Item id="TimeControlHeader">時間コントロール</Item>
+        <Item id="RibbonChartHeader">ラインチャートコントロール</Item>
+        <Item id="MainHeader">コントロール</Item>
 
         <!-- Info -->
         <Item id="InfoOptimalTitle">一番おすすめ運動</Item>
