New control panel design

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -7,6 +7,7 @@
         <Item id="LangChoose">Please select your language.</Item>
         <Item id="LangTip">You can also change your language in Settings later.</Item>
 
+        <Item id="Path">Intervention</Item>
         <Item id="PathRedConcise">No Change</Item>
         <Item id="PathYellowConcise">Minimal</Item>
         <Item id="PathGreenConcise">Optimal</Item>
@@ -46,6 +47,8 @@
         <Item id="ActCurrent">Current: {0}</Item>
 
         <!-- Below are buttons for pause menu. -->
+        <Item id="HelpInfo">Help and Info</Item>
+        <Item id="Animate">Animate</Item>"
         <Item id="Menu">Menu</Item>
         <Item id="LanguageChoose">Choose Language</Item>
         <Item id="Exit">Exit</Item>
