--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -7,6 +7,7 @@
         <Item id="LangChoose">言語を選びなさい。</Item>
         <Item id="LangTip">後で言語も変更できます。</Item>
 
+        <Item id="Path">干渉</Item>
         <Item id="PathRedConcise">変更なし</Item>
         <Item id="PathYellowConcise">最小限</Item>
         <Item id="PathGreenConcise">お勧め</Item>
@@ -46,6 +47,8 @@
         <Item id="ActCurrent">今：{0}</Item>
 
         <!-- Below are buttons for pause menu. -->
+        <Item id="HelpInfo">Help and Info</Item>
+        <Item id="Animate">Animate</Item>"
         <Item id="Menu">メニュー</Item>
         <Item id="LanguageChoose">言語選択</Item>
         <Item id="Exit">エクシ</Item>
