--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -195,8 +195,7 @@
         <Item id="InteractionTitle">Interaction System</Item>
         <Item id="InteractionText">To interact with different AR components, such as buttons, simply click them on the screen.</Item>
         <Item id="LCIntroTitle">Line Chart Visualization</Item>
-        <Item id="LCIntroText1">To the right of the figure are the data given by Bodylogical. There are 6 biometrics: body fat, BMI, HbA1C, LDL, blood pressure, and an overall score. The bars are separated into three sections, indicating health status. The indicators will be connected by ribbons across years to give you a clearer view of health development.</Item>
-        <Item id="LCIntroText2">On the left of the control panel there will be 4 control buttons. Try each of them to see what they do! Also, try clicking on each of the banners themselves to study closer.</Item>
+        <Item id="LCIntroText">Work in Progress.</Item>
         <Item id="ActIntroTitle">Activity Visualization</Item>
         <Item id="ActIntroText">Activities gives you a high-level view of the figure's health by simulating the figure's motion capabilities. You can see the character and his/her healthy friend working together. Use the slider bar and media buttons to see how they will behave in the future.</Item>
         <Item id="PriIntroTitle">Internals Visualization</Item>
