New Control panel

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -47,7 +47,8 @@
         <Item id="ActCurrent">Current: {0}</Item>
 
         <!-- Below are buttons for pause menu. -->
-        <Item id="HelpInfo">Help and Info</Item>
+        <Item id="NextVis">Next</Item>
+        <Item id="PrevVis">Previous</Item>
         <Item id="Animate">Animate</Item>"
         <Item id="Menu">Menu</Item>
         <Item id="LanguageChoose">Choose Language</Item>
@@ -69,6 +70,9 @@
         <Item id="TimeControlHeader">Time Controls</Item>
         <Item id="RibbonChartHeader">Line Chart Controls</Item>
         <Item id="MainHeader">Controls</Item>
+
+        <Item id="PanelVisual">Visual</Item>
+        <Item id="PanelTime">Time</Item>
 
         <!-- Info -->
         <Item id="InfoOptimalTitle">Recommended Activities</Item>
