--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -47,7 +47,8 @@
         <Item id="ActCurrent">今：{0}</Item>
 
         <!-- Below are buttons for pause menu. -->
-        <Item id="HelpInfo">Help and Info</Item>
+        <Item id="NextVis">次</Item>
+        <Item id="PrevVis">前</Item>
         <Item id="Animate">Animate</Item>"
         <Item id="Menu">メニュー</Item>
         <Item id="LanguageChoose">言語選択</Item>
@@ -70,6 +71,9 @@
         <Item id="RibbonChartHeader">Line Chart Controls</Item>
         <Item id="MainHeader">Controls</Item>
 
+        <Item id="PanelVisual">Visual</Item>
+        <Item id="PanelTime">時間</Item>
+
         <!-- Info -->
         <Item id="InfoOptimalTitle">Recommended Activities</Item>
         <Item id="InfoMinimalTitle">Baseline Activities for Health</Item>
@@ -88,7 +92,7 @@
 
         <!-- Line chart -->
         <Item id="LCOverall">総体</Item>
-        <Item id="LCBodyFat">Body Fat</Item> <!-- (%) -->
+        <Item id="LCBodyFat">体脂肪率</Item> <!-- (%) -->
         <Item id="LCBMI">BMI</Item>
         <Item id="LCAIC">HbA1C</Item> <!-- (%) -->
         <Item id="LCLDL">LDL</Item> <!-- (mg/dL) -->
