--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -35,7 +35,7 @@
         <Item id="LineChart">線表</Item>
         <Item id="Activity">活動</Item>
         <Item id="Prius">内蔵</Item>
-        <Item id="ShowTutorial">チュートリアル</Item>
+        <Item id="Tutorial">チュートリアル</Item>
         <Item id="Cancel">キャンセル</Item>
         <Item id="Confirm">確認</Item>
         <!-- Below are buttons specific to the line chart. -->
@@ -46,17 +46,19 @@
         <!-- Below are buttons specific to Activity. -->
         <Item id="ActCurrent">今：{0}</Item>
 
-        <!-- Below are buttons for pause menu. -->
+        <!-- Below are buttons for control panel. -->
+        <Item id="Controls">Controls</Item>
         <Item id="NextVis">次</Item>
         <Item id="PrevVis">前</Item>
         <Item id="Animate">Animate</Item>"
-        <Item id="Menu">メニュー</Item>
-        <Item id="LanguageChoose">言語選択</Item>
+        <Item id="Settings">設定</Item>
+        <Item id="Language">言語</Item>
         <Item id="Exit">エクシ</Item>
         <Item id="TutorialNext">次</Item>
         <Item id="TutorialSkip">スキップ</Item>
         <Item id="TutorialSkipAll">全てスキップ</Item>
-
+        <Item id="ResetAvatar">Reset Avatar</Item>
+        <Item id="ResetStage">Reset Stage</Item>
         <Item id="Switcher">変更</Item>
         
         <!-- Toggles -->
