--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -35,7 +35,7 @@
         <Item id="LineChart">Line Chart</Item>
         <Item id="Activity">Activity</Item>
         <Item id="Prius">Internals</Item>
-        <Item id="ShowTutorial">Show Tutorial</Item>
+        <Item id="Tutorial">Tutorial</Item>
         <Item id="Cancel">Cancel</Item>
         <Item id="Confirm">Confirm</Item>
         <!-- Below are buttons specific to the line chart. -->
@@ -46,17 +46,19 @@
         <!-- Below are buttons specific to Activity. -->
         <Item id="ActCurrent">Current: {0}</Item>
 
-        <!-- Below are buttons for pause menu. -->
+        <!-- Below are buttons for control panel. -->
+        <Item id="Controls">Controls</Item>
         <Item id="NextVis">Next</Item>
         <Item id="PrevVis">Previous</Item>
         <Item id="Animate">Animate</Item>"
-        <Item id="Menu">Menu</Item>
-        <Item id="LanguageChoose">Choose Language</Item>
+        <Item id="Settings">Settings</Item>
+        <Item id="Language">Language</Item>
         <Item id="Exit">Exit</Item>
         <Item id="TutorialNext">Next</Item>
         <Item id="TutorialSkip">Skip</Item>
         <Item id="TutorialSkipAll">Skip All</Item>
-
+        <Item id="ResetAvatar">Reset Avatar</Item>
+        <Item id="ResetStage">Reset Stage</Item>
         <Item id="Switcher">Switch</Item>
 
         <!-- Toggles -->
