Settings panel: options on buttons

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -35,7 +35,7 @@
         <Item id="LineChart">Line Chart</Item>
         <Item id="Activity">Activity</Item>
         <Item id="Prius">Internals</Item>
-        <Item id="Tutorial">Tutorial</Item>
+        <Item id="Tutorial">Tutorial: {0}</Item>
         <Item id="Cancel">Cancel</Item>
         <Item id="Confirm">Confirm</Item>
         <!-- Below are buttons specific to the line chart. -->
@@ -52,7 +52,7 @@
         <Item id="PrevVis">Previous</Item>
         <Item id="Animate">Animate</Item>"
         <Item id="Settings">Settings</Item>
-        <Item id="Language">Language</Item>
+        <Item id="Language">Language: {0}</Item>
         <Item id="Exit">Exit</Item>
         <Item id="TutorialNext">Next</Item>
         <Item id="TutorialSkip">Skip</Item>
