--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -35,7 +35,7 @@
         <Item id="LineChart">線表</Item>
         <Item id="Activity">活動</Item>
         <Item id="Prius">内蔵</Item>
-        <Item id="Tutorial">チュートリアル</Item>
+        <Item id="Tutorial">チュートリアル：{0}</Item>
         <Item id="Cancel">キャンセル</Item>
         <Item id="Confirm">確認</Item>
         <!-- Below are buttons specific to the line chart. -->
@@ -52,7 +52,7 @@
         <Item id="PrevVis">前</Item>
         <Item id="Animate">Animate</Item>"
         <Item id="Settings">設定</Item>
-        <Item id="Language">言語</Item>
+        <Item id="Language">言語：{0}</Item>
         <Item id="Exit">エクシ</Item>
         <Item id="TutorialNext">次</Item>
         <Item id="TutorialSkip">スキップ</Item>
