Line chart panel and various bug fixes

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -68,7 +68,7 @@
     <Legends>
         <!-- Panels -->
         <Item id="TimeControlHeader">Time Controls</Item>
-        <Item id="RibbonChartHeader">Line Chart Controls</Item>
+        <Item id="RibbonChartHeader">Ribbons</Item>
         <Item id="MainHeader">Controls</Item>
 
         <Item id="PanelVisual">Visual</Item>
