Removed unused tutorials

--- a/Assets/Resources/Localizations/locale-en_US.xml
+++ b/Assets/Resources/Localizations/locale-en_US.xml
@@ -52,9 +52,6 @@
         <Item id="Settings">Settings</Item>
         <Item id="Language">Language: {0}</Item>
         <Item id="Exit">Exit</Item>
-        <Item id="TutorialNext">Next</Item>
-        <Item id="TutorialSkip">Skip</Item>
-        <Item id="TutorialSkipAll">Skip All</Item>
         <Item id="ResetAvatar">Reset Avatar</Item>
         <Item id="ResetStage">Reset Stage</Item>
         <Item id="Switcher">Switch</Item>
@@ -106,7 +103,6 @@
 
         <!-- Prius -->
         <Item id="PriusWelcome">Please select a path to continue.</Item>
-        <Item id="PriusComparison">This is the healthy organ for comparison.</Item>
 
         <Item id="PriHeartGeneral">Heart health is related to blood pressure and LDL.</Item>
         <Item id="PriHeartGoodConcise">Heart is normal.</Item>
@@ -171,18 +167,15 @@
     <Instructions>
         <Item id="PlaneFind">Please find a flat surface</Item>
         <Item id="PlaneCont">Continue scanning...</Item>
-        <Item id="PlaneGood">This plane looks good. Confirm?</Item>
+        <Item id="PlaneGood">This plane looks good. Tap to confirm.</Item>
         
         <Item id="StageCreate">Creating stage...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
         
-        <Item id="ArchetypeSelect">Select archetype to start&#10;Press "Reset" to relocate plane</Item>
+        <Item id="ArchetypeSelect">Select archetype to start</Item>
         <Item id="ArchetypeRead">Reading archetype info...</Item>
-        <Item id="ArchetypePredict">Please press "?" Button</Item>
-
-         <Item id="TutorialSkipAll">Are you sure? You can restore tutorials later in Settings.</Item>
+        <Item id="ArchetypePredict">Please press "Next" Button</Item>
         <!-- Line chart -->
-        <Item id="LCAlter">Use the left buttons to alter ribbon chart.</Item>
         <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
         <Item id="LCBackground">You just hid the light blue panel background.</Item>
         <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
