--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -11,7 +11,7 @@
         <Item id="PathGreenConcise">お勧め</Item>
         <Item id="PathRedVerbose">変更なし</Item>
         <Item id="PathYellowVerbose">最小限</Item>
-        <Item id="PathGreenVerbose">変更なし</Item>
+        <Item id="PathGreenVerbose">お勧め</Item>
 
         <Item id="StatusGood">良い</Item>
         <Item id="StatusModerate">まあまあ</Item>
@@ -45,23 +45,20 @@
         <Item id="ActCurrent">今：{0}</Item>
 
         <!-- Below are buttons for control panel. -->
-        <Item id="Controls">Controls</Item>
+        <Item id="Controls">コントロール</Item>
         <Item id="NextVis">次</Item>
         <Item id="PrevVis">前</Item>
-        <Item id="Animate">Animate</Item>"
+        <Item id="Animate">動画</Item>"
         <Item id="Settings">設定</Item>
         <Item id="Language">言語：{0}</Item>
         <Item id="Exit">エクシ</Item>
-        <Item id="TutorialNext">次</Item>
-        <Item id="TutorialSkip">スキップ</Item>
-        <Item id="TutorialSkipAll">全てスキップ</Item>
         <Item id="ResetAvatar">Reset Avatar</Item>
         <Item id="ResetStage">Reset Stage</Item>
         <Item id="Switcher">変更</Item>
         
         <!-- Toggles -->
-        <Item id="ToggleOn">On</Item>
-        <Item id="ToggleOff">Off</Item>
+        <Item id="ToggleOn">オン</Item>
+        <Item id="ToggleOff">オフ</Item>
     </Buttons>
 
     <!-- Legneds are text displayed on world position canvases. -->
@@ -69,9 +66,9 @@
         <!-- Panels -->
         <Item id="TimeControlHeader">Time Controls</Item>
         <Item id="RibbonChartHeader">Line Chart Controls</Item>
-        <Item id="MainHeader">Controls</Item>
+        <Item id="MainHeader">コントロール</Item>
 
-        <Item id="PanelVisual">Visual</Item>
+        <Item id="PanelVisual">ビジュアル</Item>
         <Item id="PanelTime">時間</Item>
 
         <!-- Info -->
@@ -106,7 +103,6 @@
 
         <!-- Prius -->
         <Item id="PriusWelcome">パースを選びなさい。</Item>
-        <Item id="PriusComparison">これは比較するための健康的な器官です。</Item>
 
         <Item id="PriHeartGeneral">Heart health is related to blood pressure and LDL.</Item>
         <Item id="PriHeartGoodConcise">Heart is normal.</Item>
@@ -171,18 +167,15 @@
     <Instructions>
         <Item id="PlaneFind">平たい表面を見つけなさい。</Item>
         <Item id="PlaneCont">スキャン中...</Item>
-        <Item id="PlaneGood">この平面は良さそうです。確認？</Item>
+        <Item id="PlaneGood">この平面は良さそうです。タップして確認しなさい。</Item>
         
         <Item id="StageCreate">舞台創作中...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
         
-        <Item id="ArchetypeSelect">Select archetype to start&#10;Press "Reset" to relocate plane</Item>
+        <Item id="ArchetypeSelect">Select archetype to start</Item>
         <Item id="ArchetypeRead">Reading archetype info...</Item>
-        <Item id="ArchetypePredict">「？」バトンを押しなさい。</Item>
-
-        <Item id="TutorialSkipAll">Are you sure? You can restore tutorials later in Settings.</Item>
+        <Item id="ArchetypePredict">「次」バトンを押しなさい。</Item>
         <!-- Line chart -->
-        <Item id="LCAlter">Use the left buttons to alter ribbon chart.</Item>
         <Item id="LCToggleRibbon">You have toggled the ribbon charts. This would allow you to focus on individual years.</Item>
         <Item id="LCBackground">You just hid the light blue panel background.</Item>
         <Item id="LCDim">You just dimmed the bars. Click again to light them up.</Item>
