Removed unused scripts

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -104,31 +104,17 @@
         <!-- Prius -->
         <Item id="PriusWelcome">パースを選びなさい。</Item>
 
-        <Item id="PriHeartGeneral">Heart health is related to blood pressure and LDL.</Item>
-        <Item id="PriHeartGoodConcise">Heart is normal.</Item>
-        <Item id="PriHeartGoodVerbose">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
-        <Item id="PriHeartIntermediateConcise">Heart has trouble pumping blood.</Item>
-        <Item id="PriHeartIntermediateVerbose">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging.</Item>
-        <Item id="PriHeartBadConcise">High blood pressure and cholesterol will clog the blood pressure and cause problems sucha s stroke, heart attack, etc.</Item>
-        <Item id="PriHeartBadVerbose">Arteries have high chance of clogging, potentials for heart attacks.</Item>
+        <Item id="PriHeartGood">Low blood pressure and cholesterol levels mean a healthy circulatory system.</Item>
+        <Item id="PriHeartIntermediate">Rising blood pressure and cholesterol will start damaging arteries that can lead to clogging.</Item>
+        <Item id="PriHeartBad">High blood pressure and cholesterol will clog the blood pressure and cause problems sucha s stroke, heart attack, etc.</Item>
 
-        <Item id="PriLiverGeneral">Liver health is related to BMI and LDL.</Item>
-        <Item id="PriLiverGoodConcise">Liver is normal.</Item>
-        <Item id="PriLiverGoodVerbose">With a slim body and low LDL levels the liver has no problems.</Item>
-        <Item id="PriLiverIntermediateConcise">Liver is in the process of fatty liver.</Item>
-        <Item id="PriLiverIntermediateVerbose">A larger waist and rising LDL means the liver is accumulating fat.</Item>
-        <Item id="PriLiverBadConcise">Fatty liver has formed.</Item>
-        <Item id="PriLiverBadVerbose">Obesity and persistent high LDL cause fat to accumulate in the liver and leads to fatty liver.</Item>
+        <Item id="PriLiverGood">With a slim body and low LDL levels the liver has no problems.</Item>
+        <Item id="PriLiverIntermediate">A larger waist and rising LDL means the liver is accumulating fat.</Item>
+        <Item id="PriLiverBad">Obesity and persistent high LDL cause fat to accumulate in the liver and leads to fatty liver.</Item>
 
-        <Item id="PriKidneyGeneral">Kindey health is related to blood pressure and glucose.</Item>
-        <Item id="PriKidneyGoodConcise">Kidney is normal.</Item>
-        <Item id="PriKidneyGoodVerbose">With low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
-        <Item id="PriKidneyIntermediateConcise">Kidney is in process of diabetes.</Item>
-        <Item id="PriKidneyIntermediateVerbose">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
-        <Item id="PriKidneyBadConcise">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
-        <Item id="PriKidneyBadVerbose">Kidney is experiencing diabetes.</Item>
-        
-        <Item id="PriHeartVessel">This is a blood vessel with red cells flowing through. As the person's health gets worse, the vessel might get clogged, preventing cells to flow.</Item>
+        <Item id="PriKidneyGood">With low blood pressure and low glucose allows the kidney to filter toxins out of the blood.</Item>
+        <Item id="PriKidneyIntermediate">Rising blood pressure and glucose starts to impair kidney function to filter toxins.</Item>
+        <Item id="PriKidneyBadVerbose">Persistent high blood pressure and high glucosee levels have led to kidney damage and the kidney stops filtering toxins, causing diabetes.</Item>
     </Legends>
 
     <!-- Archetype data -->
