Updated beginning instruction

--- a/Assets/Resources/Localizations/locale-ja_JP.xml
+++ b/Assets/Resources/Localizations/locale-ja_JP.xml
@@ -156,7 +156,7 @@
     <!-- Instructions are things that will be displayed on the overlay canvas. -->
     <Instructions>
         <Item id="PlaneFind">平たい表面を見つけなさい。</Item>
-        <Item id="PlaneGood">この平面は良さそうです。タップして確認しなさい。</Item>
+        <Item id="PlaneGood">平たい表面を見つけなさい。&#10;この平面は良さそうです。タップして確認しなさい。</Item>
         
         <Item id="StageCreate">舞台創作中...</Item>
         <Item id="StageConfirm">Double tap to confirm stage position</Item>
